Updates for 1.8.0.20250218T172031Z:
Bugfixes:
- Fix selection of default language if there is no language cookie.

Updates for 1.8.0.20241205T155703Z:

Improvements:
- New options to control OIDC refresh token lifetime.
- SubjecNameMappings configurable on both RP and CP side.
- Flow polcies support direct redirects.
- OpsDebug feature improved allowing customization of log levels.
- Script compilation errors are now refleected on /api/v1/config/status
- Script BeforeResponse hook added to allow script hooks on the complete, yet unfiltered output data.
- OpsAudit allows controlling what data is audited.
- Dependencies updated.

Bugfixes:
- OIDC setup without client secret addressed with a private
  authorization_code lead to HTTP 302 instead of 401